[package]
authors = ["Wojciech Jakobczyk <jakobczyk.woj@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "kawa"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
cty = "0.2.0"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
embedded-graphics = { version = "0.6.2" }
numtoa = "0.2.3"
alloc-cortex-m = "0.4.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

[dependencies.stm32f4]
features = ["stm32f407", "rt"]
version = "0.8.0"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f407"]
version = "0.6.0"

[dependencies.st7920]
git = "https://github.com/wjakobczyk/st7920.git"

[dependencies.midi-port]
git = "https://github.com/wjakobczyk/midi-port.git"

[dependencies.stm32-flash]
path = "../../stm32-flash"

# this lets you use `cargo fix`!
[[bin]]
name = "kawa"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
